# indratrace-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
dev/: README.md  docker-compose.yml  otel-collector-config.yaml  requirements.txt  send_test_span.py
docs/: 00-setup.md  architecture.md  conventions.md  product-spec.md
docs/adr/: 0001-two-repo-split.md  0002-public-pypi-package.md  0003-thin-otel-wrapper.md  0004-test-harness-in-sdk-repo.md  0005-genai-auto-instrumentation.md  0006-v01-signal-scope.md  0007-log-bridge-opt-in-level.md  0008-agent-sdk-instrumentation.md
scripts/: make_public_copy.sh
src/indratrace/: __init__.py  agent.py  agent_sdk.py  config.py  context.py  genai.py  init.py  logs.py  version.py  web.py
tests/: conftest.py  test_agent.py  test_agent_sdk.py  test_config.py  test_context.py  test_debug.py  test_genai.py  test_init.py  test_init_logs_metrics.py  test_loguru.py  test_web.py
tests/integration/: test_agent_sdk_live.py  test_genai_live.py  test_harness.py
